tests/ui/consts/min_const_fn/min_const_unsafe_fn_libstd_stability2.stderr
error: `foo` is not yet stable as a const fn
  --> $DIR/min_const_unsafe_fn_libstd_stability2.rs:16:32
   |
LL | const unsafe fn bar() -> u32 { foo() }
   |                                ^^^^^
   |
   = help: const-stable functions can only call other const-stable functions

error: `foo2` is not yet stable as a const fn
  --> $DIR/min_const_unsafe_fn_libstd_stability2.rs:24:33
   |
LL | const unsafe fn bar2() -> u32 { foo2() }
   |                                 ^^^^^^
   |
   = help: const-stable functions can only call other const-stable functions

error: `foo2_gated` is not yet stable as a const fn
  --> $DIR/min_const_unsafe_fn_libstd_stability2.rs:33:39
   |
LL | const unsafe fn bar2_gated() -> u32 { foo2_gated() }
   |                                       ^^^^^^^^^^^^
   |
   = help: const-stable functions can only call other const-stable functions

error: aborting due to 3 previous errors

